services/flux-webhook/resources/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  hostnames:
  - webhook.flux.mcswain.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: webhook-receiver
      namespace: flux-system
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
